# RepoAnchor

./: .gitignore  .repo-anchor.md  README.md  pyproject.toml
src/parser/: python_parser.py
src/repoanchor/: cli.py
src/repoanchor/cache/: manager.py
src/repoanchor/parser/: markdown_compiler.py  orchestrator.py  python_parser.py  registry.py  relation_analyzer.py  structural_fallback.py
tests/integration/: test_cli_flow.py  test_compiler_flow.py  test_skeletonize_flow.py
tests/unit/: test_cache_manager.py  test_python_parser.py  test_registry.py  test_relation_analyzer.py  test_structural_fallback.py
